done with part 1 i think, just cleanup

--- a/rain_neuro_part2.ipynb
+++ b/rain_neuro_part2.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,16 +55,21 @@
     "        \n",
     "    # handle q2\n",
     "    if q2 == 0:\n",
-    "        y1 = 0\n",
+    "        y2 = 0\n",
     "    elif q2 == 1:\n",
-    "        x1 = 0\n",
+    "        x2 = 0\n",
     "    elif q2 == 2:\n",
-    "        y1 = l\n",
+    "        y2 = l\n",
     "    elif q2 == 3:\n",
-    "        x1 = l\n",
+    "        x2 = l\n",
     "        \n",
     "    p1 = (x1, y1)\n",
-    "    p2 = x\n",
+    "    p2 = (x2, y2)\n",
+    "    \n",
+    "    print(\"P1:\", p1)\n",
+    "    print(\"P2:\", p2)\n",
+    "    \n",
+    "    return[p1, p2]\n",
     "    \n",
     "            \n",
     "\n",
@@ -73,16 +78,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Q values:  0 1\n",
-      "Initial endpoints: 0.9518039233040794 2.1029902314756073 2.752184060014717 2.7924495237066456\n"
+      "Q values:  2 1\n",
+      "Initial endpoints: 2.129592034000952 1.7277835880553987 2.276224165646659 2.9799308346633966\n",
+      "P1: (2.129592034000952, 3)\n",
+      "P2: (0, 2.9799308346633966)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(2.129592034000952, 3), (0, 2.9799308346633966)]"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
