chugging right along

--- a/rain_neuro_part2.ipynb
+++ b/rain_neuro_part2.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tkinter\n",
-    "import random"
+    "import random\n",
+    "from math import sqrt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +32,7 @@
     "        q1 = random.randint(0,3)\n",
     "        q2 = random.randint(0,3)\n",
     "        \n",
-    "    print(\"Q values: \", q1, q2)\n",
+    "#     print(\"Q values: \", q1, q2)\n",
     "    \n",
     "    # x1, y1, x2, y2 are the endpoints of the wire\n",
     "    # they are from uniform rand var T over [0, l]\n",
@@ -40,7 +41,7 @@
     "    y1 = random.uniform(0, l)\n",
     "    y2 = random.uniform(0, l)\n",
     "    \n",
-    "    print(\"Initial endpoints:\", x1, y1, x2, y2)\n",
+    "#     print(\"Initial endpoints:\", x1, y1, x2, y2)\n",
     "    \n",
     "    # apply the adjustment table to q1, q2 to anchor endpoints\n",
     "    # @TODO clean this code up\n",
@@ -66,8 +67,8 @@
     "    p1 = (x1, y1)\n",
     "    p2 = (x2, y2)\n",
     "    \n",
-    "    print(\"P1:\", p1)\n",
-    "    print(\"P2:\", p2)\n",
+    "#     print(\"P1:\", p1)\n",
+    "#     print(\"P2:\", p2)\n",
     "    \n",
     "    return[p1, p2]\n",
     "    \n",
@@ -78,33 +79,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# determine if an electrode is touching a wire\n",
+    "# takes in tuple of coordinates of electrode\n",
+    "# takes in list of tuples of endpoints of wire\n",
+    "def electrode_touching_wire(electrode_points, wire_points, r_e_):\n",
+    "    # the formula for min distance between wire and electrode is given in sec 2.1\n",
+    "    \n",
+    "    x_e, y_e = electrode_points\n",
+    "    x1, y1 = wire_points[0]\n",
+    "    x2, y2 = wire_points[1]\n",
+    "    \n",
+    "    numerator = abs(x_e * (y2 - y1) - y_e * (x2 - x1) + x2 * y1 - y2 * x1)\n",
+    "    denominator = sqrt((x2 - x1)**2 + (y2 - y1)**2)\n",
+    "    \n",
+    "    distance = numerator / denominator\n",
+    "    \n",
+    "    # wire is touching if min distance is less than electrode radius\n",
+    "    return distance <= r_e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# main function to run simulation\n",
+    "def main(a=1, r_e=0.4, n_e=9, lambda_constant=30):\n",
+    "    \n",
+    "    # height/width of grid\n",
+    "    l = a * (1 + sqrt(n_e)) \n",
+    "    \n",
+    "    # number of wires\n",
+    "    n_w = int(lambda_constant * sqrt(n_e))\n",
+    "    \n",
+    "    # generate wire coordinates\n",
+    "    wires = []\n",
+    "    for i in range(n_w):\n",
+    "        wires.append(generate_wire(l))\n",
+    "        \n",
+    "    # generate electrode coordinates\n",
+    "    # they are evenly spaced out\n",
+    "    electrodes = []\n",
+    "    for i in range(n_e):\n",
+    "        x = i * (l / )\n",
+    "        electrodes.append()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Q values:  2 1\n",
-      "Initial endpoints: 2.129592034000952 1.7277835880553987 2.276224165646659 2.9799308346633966\n",
-      "P1: (2.129592034000952, 3)\n",
-      "P2: (0, 2.9799308346633966)\n"
+      "90\n",
+      "90\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[(2.129592034000952, 3), (0, 2.9799308346633966)]"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# cell for testing\n",
-    "generate_wire(l=3)"
+    "main()"
    ]
   },
   {
@@ -112,10 +154,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# main function to run simulation\n",
-    "def main(a, r_e, n_e, lambda_constant):"
-   ]
+   "source": []
   }
  ],
  "metadata": {
