backend is done, just need to make visualization

--- a/rain_neuro_part2.ipynb
+++ b/rain_neuro_part2.ipynb
@@ -86,7 +86,7 @@
     "# determine if an electrode is touching a wire\n",
     "# takes in tuple of coordinates of electrode\n",
     "# takes in list of tuples of endpoints of wire\n",
-    "def electrode_touching_wire(electrode_points, wire_points, r_e_):\n",
+    "def electrode_touching_wire(electrode_points, wire_points, r_e):\n",
     "    # the formula for min distance between wire and electrode is given in sec 2.1\n",
     "    \n",
     "    x_e, y_e = electrode_points\n",
@@ -104,12 +104,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
     "# main function to run simulation\n",
     "def main(a=1, r_e=0.4, n_e=9, lambda_constant=30):\n",
+    "    \n",
+    "    # delete???\n",
+    "    r_e = r_e\n",
     "    \n",
     "    # height/width of grid\n",
     "    l = a * (1 + sqrt(n_e)) \n",
@@ -123,24 +126,43 @@
     "        wires.append(generate_wire(l))\n",
     "        \n",
     "    # generate electrode coordinates\n",
-    "    # they are evenly spaced out\n",
+    "    # they are evenly spaced out along the lxl grid\n",
     "    electrodes = []\n",
-    "    for i in range(n_e):\n",
-    "        x = i * (l / )\n",
-    "        electrodes.append()"
+    "    for i in range(int(sqrt(n_e))):\n",
+    "        for j in range(int(sqrt(n_e))):\n",
+    "            x = i * (l / n_e)\n",
+    "            y = j * (l / n_e)\n",
+    "            electrodes.append((x, y))\n",
+    "        \n",
+    "    # generate dictionaries of electrodes and the wires they touch\n",
+    "    electrode_wire_dict = {}\n",
+    "    \n",
+    "    for electrode in electrodes:\n",
+    "        for wire in wires:\n",
+    "            wires_touching = []\n",
+    "            if electrode_touching_wire(electrode, wire, r_e):\n",
+    "                wires_touching.append(wire)\n",
+    "            electrode_wire_dict[electrode] = wires_touching\n",
+    "    \n",
+    "    print(electrode_wire_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "90\n",
-      "90\n"
+     "ename": "NameError",
+     "evalue": "name 'r_e' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-128-17287131be3a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# cell for testing\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-127-a52833e354a5>\u001b[0m in \u001b[0;36mmain\u001b[0;34m(a, r_e, n_e, lambda_constant)\u001b[0m\n\u001b[1;32m     31\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mwire\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mwires\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m             \u001b[0mwires_touching\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0melectrode_touching_wire\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0melectrode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwire\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr_e\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m                 \u001b[0mwires_touching\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwire\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m             \u001b[0melectrode_wire_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0melectrode\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwires_touching\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-112-ddeedb434238>\u001b[0m in \u001b[0;36melectrode_touching_wire\u001b[0;34m(electrode_points, wire_points, r_e_)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;31m# wire is touching if min distance is less than electrode radius\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mdistance\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mr_e\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'r_e' is not defined"
      ]
     }
    ],
